--- a/frontend/frontend/pubspec.yaml
+++ b/frontend/frontend/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,7 +61,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/get_started1.svg
+    - assets/get_started2.svg
+    - assets/get_started3.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
