--- a/frontend/frontend/pubspec.yaml
+++ b/frontend/frontend/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg_provider: ^1.0.7
 
   
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_svg: ^2.0.10+1
+  # flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
     - assets/get_started1.svg
     - assets/get_started2.svg
     - assets/get_started3.svg
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
