--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -57,7 +57,7 @@ dist/
 downloads/ 
 eggs/ 
 .eggs/ 
-# lib/ 
+lib/ 
 lib64/ 
 parts/ 
 sdist/ 
@@ -165,25 +165,3 @@ migrate_working_dir/
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.packages
-.pub-cache/
-.pub/
-frontend/frontend/build/
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
