--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,8 +7,13 @@ db.sqlite3
 media
 .DS_Store
 
-# Backup files # 
-*.bak 
+
+
+# Pipenv
+Pipfile
+Pipfile.lock
+ 
+
 
 # If you are using PyCharm # 
 # User-specific stuff
